# TestProject

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: Common.cmake  Version.cmake
src/: CMakeLists.txt  KeyFile.cpp  KeyFile.h  main.cpp  version.rc
